fix layout issue of quickmenu shadow

--- a/html/smarty/templates/default/css/_basic.css
+++ b/html/smarty/templates/default/css/_basic.css
@@ -986,8 +986,7 @@ td.settings
     z-index: 1000005;
     top: 0px;
     left: 0px;
-    width: 28em;
-    _height: 250px;
+    width: 27.4em;
 }
 .quickmenubutton
 {
