--- a/html/smarty/templates/default/css/classic/classic.css
+++ b/html/smarty/templates/default/css/classic/classic.css
@@ -562,11 +562,8 @@ table.browsetoptable
 }
 #quickmenuinner
 {
-    position: relative;
     box-shadow: -3px 3px 3px 4px #000000;
-    width: 250px;
 }
-
 .quickwindowon
 {
     position: fixed;
