--- a/html/smarty/templates/default/css/silver/silver.css
+++ b/html/smarty/templates/default/css/silver/silver.css
@@ -514,9 +514,7 @@ table.basketbuttons
 }
 #quickmenuinner
 {
-    position: relative;
     box-shadow: -3px 3px 3px 4px #444444;
-    width: 250px;
 }
 .quickmenuitem
 {
